--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "js-cicd-semver",
   "version": "1.0.0",
   "description": "Example of implementing versioning in CICD",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christopher Wagner",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
