--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
             or:
               - equal: [ << pipeline.git.branch >>, "develop" ]
               - matches:
-                  pattern: feature*
+                  pattern: ^feature.+$
                   value: << pipeline.git.branch >> 
           steps:
             - run: 
@@ -23,7 +23,7 @@ commands:
       - when:
           condition:
             matches:
-              pattern: release*
+              pattern: ^release.+$
               value: << pipeline.git.branch >>
           steps:
             - run:
