--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,21 @@ orbs:
   docker: circleci/docker@2.2.0
 
 commands:
-  set-prerelease-env:
+  # This command will set the environment variable PRE_RELEASE
+  # based on the branch that is recieving the push.
+  #
+  # The repository should be `checked-out` prior to using this command.
+  # The command needs the version.js file that is used to build the version.
+  #
+  # Node should also be present on the machine running the job as it is needed
+  # to run the version.js script.
+  #
+  # The following values are mappings shoud be set for PRE_RELEASE
+  # feature* == "dev"
+  # develop  == "dev"
+  # release  == "rc"
+  # main     == "" (main is considered a stable release)
+  set-version-envs:
     steps:
       - run: 
           name: Set Default PRE_RELEASE Value
@@ -29,6 +43,9 @@ commands:
             - run:
                 name: Set PRE_RELEASE Value for Release Branches
                 command: echo "export PRE_RELEASE='rc'" >> $BASH_ENV
+      - run:
+          name: Set Version
+          command: node version.js
 
 jobs:
   # Bulid Dockerfile
@@ -39,15 +56,16 @@ jobs:
       dlc: true
       name: docker/machine
     steps:
-      - set-prerelease-env
-      - run: printenv PRE_RELEASE
+      - checkout
+      - set-version-envs
+      # - docker/build:
+      #     extra_build_args: 
+      #     image:
+      #     lint-dockerfile:
+      #     tag: 
 
 # Deliver Docker Image
 # This job should run on develop, release, and main.
-# The following values are mappings shoud be set for PRE_RELEASE
-# develop == "dev"
-# release == "rc"
-# main == "" (main is considered a stable release)
 
 # Run test suites
 # This job should run on all branches and persist the output.
