Change depends_on to requires

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,7 +118,7 @@ workflows:
       - build
       - push:
           context: DockerHub
-          depends_on: build
+          requires: [build]
           filters:
             branches:
               only:
