--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Save Image as Tar
           command: |
-            docker image save -o docker.tar
+            docker image save -o docker.tar cwagne17/$CIRCLE_PROJECT_REPONAME
       - persist_to_workspace:
           root: .
           paths:
