--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,8 +104,10 @@ jobs:
       - when:
           condition:
             or:
-              - equal: [ $PRE_RELEASE, "dev" ]
-              - equal: [ $PRE_RELEASE, "rc" ]
+              - equal: [ << pipeline.git.branch >>, "develop" ]
+              - matches:
+                  pattern: ^release.+$
+                  value: << pipeline.git.branch >>
           steps:
             - run:
                 name: Create GitHub Pre-release
